[package]
name = "rocksdb-sys"
version = "0.1.0"
authors = ["Jeremy Fitzhardinge <jeremy@goop.org>"]
license = "MIT/Apache-2.0/BSD"
description = "Native bindings to the rocksdb library"
readme = "README.md"
repository = "https://github.com/jsgf/rocksdb-sys.git"
keywords = [ "ffi", "rocksdb" ]
build = "build.rs"
links = "rocksdb"

[dependencies]
libc = "0.1.8"
